--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vite": "^7.1.2"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.0.17",
         "vue": "^3.5.18"
     }
